fixed vvi-logo overflowing on narrow viewports on IE11

--- a/styles.css
+++ b/styles.css
@@ -250,6 +250,7 @@ section#vvi-section .feature-link:hover .feature-button::after {
     position: relative;
     z-index: 3;
     max-width: 100%;
+    min-width: 1px;
 }
 
 /* Hours and Location Section */
